// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

import "google/protobuf/wrappers.proto";

option go_package = "github.com/zsmartex/zsmartex/ent/proto/entpb";

message Code {
  bytes id = 1;

  string user_id = 2;

  string code = 3;

  Type type = 4;

  Category category = 5;

  google.protobuf.Int64Value email_index = 6;

  google.protobuf.StringValue email_encrypted = 7;

  google.protobuf.Int64Value phone_index = 8;

  google.protobuf.StringValue phone_encrypted = 9;

  bytes data = 10;

  google.protobuf.Timestamp created_at = 11;

  google.protobuf.Timestamp updated_at = 12;

  enum Type {
    TYPE_UNKNOWN = 0;

    TYPE_EMAIL = 1;

    TYPE_PHONE = 2;
  }

  enum Category {
    CATEGORY_UNKNOWN = 0;

    CATEGORY_REGISTER = 1;

    CATEGORY_RESET_PASSWORD = 2;

    CATEGORY_LOGIN = 3;
  }
}

message User {
  bytes id = 1;

  string uid = 2;

  google.protobuf.StringValue email = 3;

  string password = 4;

  Role role = 5;

  google.protobuf.Timestamp created_at = 6;

  google.protobuf.Timestamp updated_at = 7;

  enum Role {
    ROLE_MEMBER = 0;

    ROLE_ADMIN = 1;
  }
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  bytes id = 1;
}

message ListUserRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListUserResponse {
  repeated User user_list = 1;

  string next_page_token = 2;
}

message BatchCreateUsersRequest {
  repeated CreateUserRequest requests = 1;
}

message BatchCreateUsersResponse {
  repeated User users = 1;
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteUserRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListUserRequest ) returns ( ListUserResponse );

  rpc BatchCreate ( BatchCreateUsersRequest ) returns ( BatchCreateUsersResponse );
}
